<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_index"
            android:checked="true"
            android:icon="@drawable/ic_slow_motion_video_black_24dp"
            android:title="@string/index" />
        <item
            android:id="@+id/nav_hot"
            android:icon="@drawable/ic_slow_motion_video_black_24dp"
            android:title="@string/hot" />
        <item
            android:id="@+id/nav_rp"
            android:icon="@drawable/ic_slow_motion_video_black_24dp"
            android:title="@string/near_rp" />
        <item
            android:id="@+id/nav_ten_minutes"
            android:icon="@drawable/ic_slow_motion_video_black_24dp"
            android:title="@string/ten_minutes" />
        <item
            android:id="@+id/nav_this_months"
            android:icon="@drawable/ic_slow_motion_video_black_24dp"
            android:title="@string/this_month" />
        <item
            android:id="@+id/nav_this_months_collect"
            android:icon="@drawable/ic_slow_motion_video_black_24dp"
            android:title="@string/this_month_collect" />
        <item
            android:id="@+id/nav_most_collect"
            android:icon="@drawable/ic_slow_motion_video_black_24dp"
            android:title="@string/most_collect" />
        <item
            android:id="@+id/nav_near_score"
            android:icon="@drawable/ic_slow_motion_video_black_24dp"
            android:title="@string/near_score" />
        <item
            android:id="@+id/nav_this_months_hot"
            android:icon="@drawable/ic_slow_motion_video_black_24dp"
            android:title="@string/this_month_hot" />
        <item
            android:id="@+id/nav_last_months_hot"
            android:icon="@drawable/ic_slow_motion_video_black_24dp"
            android:title="@string/last_month_hot" />
        <item
            android:id="@+id/nav_hd_video"
            android:icon="@drawable/ic_slow_motion_video_black_24dp"
            android:title="@string/hd_video" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_my_collect"
                android:icon="@drawable/ic_star_border_black_24dp"
                android:title="@string/my_collect" />
            <item
                android:id="@+id/nav_my_download"
                android:icon="@drawable/ic_cloud_download_black_24dp"
                android:title="@string/my_download" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_error_outline_black_24dp"
                android:title="@string/about_me" />
        </menu>
    </item>

</menu>
