<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/ic_video_library_black_24dp"
        android:title="@string/title_video" />

    <item
        android:id="@+id/navigation_photo"
        android:icon="@drawable/ic_photo_library_black_24dp"
        android:title="@string/title_photo" />

    <item
        android:id="@+id/navigation_books"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_library_music_black_24dp"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/title_me" />

</menu>
