<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_video"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_black_24dp"
        app:iconTint="@color/white"
        android:title="搜索视频"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_history"
        android:orderInCategory="100"
        android:icon="@drawable/ic_history_black_24dp"
        app:iconTint="@color/white"
        android:title="@string/history_views"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_playback_engine"
        android:orderInCategory="100"
        android:title="@string/playback_engine"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit_app"
        android:orderInCategory="100"
        android:title="@string/exit_app"
        app:showAsAction="never" />
</menu>
