<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background"
    android:orientation="vertical"
    tools:context="com.u91porn.ui.proxy.ProxySettingActivity">

    <include layout="@layout/layout_toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tip_proxy_setting"
        android:textColor="@color/common_black_white_text_color" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <com.u91porn.widget.IpInputEditText
        android:id="@+id/et_dialog_proxy_setting_ip_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_dialog_proxy_setting_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/port"
            android:inputType="number"
            android:lines="1"
            android:theme="@style/MyEditText" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_proxy_setting_reset"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/button_selector_red"
            android:text="@string/clean"
            android:textColor="@color/common_always_white_text_color" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_proxy_setting_test"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/button_selector"
            android:text="@string/test"
            android:textColor="@color/common_always_white_text_color" />

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_proxy_setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
