<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="提示：地址设置只需要主地址，不需要长长的一串，例如：你要设置百度为地址，现在你有地址https://www.baidu.com/s?wd=xxxxrsv_iqid=0xfea01101000018c1xxxxxxx,后面接着长长的一串东西，但是你不需要输入这么多，只需要输入第一个“/”之前的内容即可(包括“/”),所以我们最终设置的地址应该是：https://www.baidu.com/，以此类推。测试结果仅供参考"
        android:textColor="@color/common_black_white_text_color" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/atv_dialog_address_setting_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="示例：https://www.baidu.com/" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_dialog_address_setting_test"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/test"
            android:textColor="@color/common_always_white_text_color" />

        <android.support.v4.widget.Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_dialog_address_setting_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/back"
            android:textColor="@color/common_always_white_text_color" />

        <android.support.v4.widget.Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_dialog_address_setting_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_red"
            android:text="@string/sure"
            android:textColor="@color/common_always_white_text_color" />
    </LinearLayout>
</LinearLayout>